Реализовал добавление/удаление тасков. Нужно добить добавление таска к родителю в сабтаскс, при добавлении дочернего элемента

--- a/src/App.css
+++ b/src/App.css
@@ -36,37 +36,51 @@
     transform: rotate(360deg);
   }
 }
-.Create-task-button{
-  width: 20px;
-  height: 20px;
+
+.app-container{
+  margin-left: 50px;
+  margin-top: 20px;
+}
+.Create-task-button,
+.suggest-task-button,
+.cancel-task-button{
+  width: 30px;
+  height: 30px;
   position: relative;
-  opacity: 0;
+  color: transparent;
+  background: transparent;
+  border: 0;
+  opacity: 1;
 }
 
-.close-icon::before,
-.close-icon::after,
+.delete-icon::before,
+.delete-icon::after,
 .create-icon::before,
-.create-icon::after{
+.create-icon::after
+{
   content: "";
   position: absolute;
-  left: -2px;
-  top: 8px;
   width: 24px;
   height: 4px;
   background: black;
+  margin-top: 3px;
 }
 
-.close-icon::before {
-  /*width: 1px; !* Толщина горизонтальной линии *!*/
-  /*height: 20px; !* Высота линии *!*/
-  /*left: 50%; !* Центрирование по горизонтали *!*/
+.delete-icon::before,
+.delete-icon::after,
+.create-icon::before,
+.create-icon::after{
+  left: 2px;
+  top: 8px;
+}
+
+
+.delete-icon::before{
+
   transform: rotate(45deg); /* Смещение влево на половину ширины */
 }
 
-.close-icon::after {
-  /*width: 20px; !* Длина вертикальной линии *!*/
-  /*height: 1px; !* Толщина вертикальной линии *!*/
-  /*top: 5px; !* Центрирование по вертикали *!*/
+.delete-icon::after{
   transform: rotate(-45deg); /* Смещение вверх на половину высоты */
 }
 
@@ -82,22 +96,26 @@
   transform: rotate(180deg);
 }
 
-
 .Button-Bar{
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   margin-top: 20px;
   width: 20%;
 }
+
 
 .button-container {
   position: relative; /* Устанавливаем контекст для абсолютного позиционирования */
 }
 
+.button-wrapper{
+  display: flex;
+  justify-content: space-between;
+}
+
 .main-task-button{
   width: 200px;
   height: 50px;
-  margin: 50px;
 }
 
 .numbered {
@@ -116,31 +134,15 @@
   left: -1.5em; /* Рекомендуется настроить смещение */
 }
 
-.suggest-task-button {
+.add-task-input{
+  width: 250px;
+  height: 30px;
   position: relative;
-  width: 50px;
-  height: 50px;
-  background-color: #4caf50; /* Цвет кнопки */
-  border-radius: 5px; /* Закругление углов */
-  color: black;
-  font-size: 16px;
-  cursor: pointer;
-  outline: none;
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
 }
 
-.suggest-task-button {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  width: 24px; /* Ширина галочки */
-  height: 24px; /* Высота галочки */
-  background-color: transparent; /* Прозрачный фон */
-  border-width: 0 4px 4px 0; /* Изменяем ширину границы для создания галочки */
-  transform: translate(-50%, -50%) rotate(45deg); /* Центрируем и поворачиваем */
-  opacity: 1; /* Скрываем галочку по умолчанию */
-  transition: opacity 0.2s; /* Плавный переход при появлении */
-}
-
-.suggest-task-button:hover .checkmark {
-  opacity: 1; /* Показываем галочку при наведении */
+.task-title{
+  margin-right: 30px;
 }
