--- a/src/App.css
+++ b/src/App.css
@@ -1,51 +1,21 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .app-container{
   margin-left: 50px;
   margin-top: 20px;
+  padding: 24px;
+  width: fit-content;
+  border-radius: 24px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0 7px 29px 0;
 }
-.Create-task-button,
+
+.main-title {
+  margin: 0 0 24px 0;
+}
+
+.create-task-button,
 .suggest-task-button,
 .cancel-task-button{
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   position: relative;
   color: transparent;
   background: transparent;
@@ -53,30 +23,29 @@
   opacity: 1;
 }
 
+button.remove-task-button {
+  background-color: crimson;
+}
+
+button.remove-task-button:hover {
+  background-color: #811329;
+}
+
 .delete-icon::before,
 .delete-icon::after,
 .create-icon::before,
-.create-icon::after
-{
+.create-icon::after {
   content: "";
   position: absolute;
-  width: 24px;
-  height: 4px;
-  background: black;
-  margin-top: 3px;
+  display: block;
+  width: 10px;
+  height: 2px;
+  background: white;
+  top: calc(50% - 1px);
+  left: calc(50% - 5px);
 }
-
-.delete-icon::before,
-.delete-icon::after,
-.create-icon::before,
-.create-icon::after{
-  left: 2px;
-  top: 8px;
-}
-
 
 .delete-icon::before{
-
   transform: rotate(45deg); /* Смещение влево на половину ширины */
 }
 
@@ -85,37 +54,17 @@
 }
 
 .create-icon::after{
-  transform: rotate(-45deg);
-}
-
-.create-icon::after{
   transform: rotate(90deg);
 }
 
-.create-icon::before{
-  transform: rotate(180deg);
-}
-
-.Button-Bar{
-  display: flex;
-  justify-content: space-between;
-  margin-top: 20px;
-  width: 30%;
-}
-
-
 .button-container {
-  position: relative; /* Устанавливаем контекст для абсолютного позиционирования */
+  position: relative;
+  margin: 0 4px;
 }
 
 .button-wrapper{
   display: flex;
   justify-content: space-between;
-}
-
-.main-task-button{
-  width: 250px;
-  height: 50px;
 }
 
 .numbered {
@@ -134,16 +83,3 @@
 /*  position: absolute; !* Абсолютное позиционирование для номера *!*/
 /*  left: -1.5em; !* Рекомендуется настроить смещение *!*/
 /*}*/
-
-.add-task-input{
-  width: 250px;
-  height: 30px;
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  padding: 15px;
-}
-
-.task-title{
-  margin-right: 30px;
-}
