--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,16 @@
-.app-container{
+.interaction-task-container{
   margin-left: 50px;
   margin-top: 20px;
   padding: 24px;
   width: fit-content;
   border-radius: 24px;
   box-shadow: rgba(100, 100, 111, 0.2) 0 7px 29px 0;
+}
+
+.selected-task-container{
+  position: absolute;
+  right: 30px;
+  top: 30px;
 }
 
 .main-title {
