Переделал checkboxes ещё раз, добавил кнопки сворачивания, добил окошко справа с текстом и тайтлом. Осталось только добавить редактирование.

--- a/src/components/TaskItem/TaskItem.css
+++ b/src/components/TaskItem/TaskItem.css
@@ -11,3 +11,16 @@
 .task-item__text {
     margin-right: 30px;
 }
+
+.arrow {
+    font-size: 24px;
+    color: black;
+    margin-top: -7px;
+}
+
+.arrow-up {
+    font-size: 24px;
+    color: black;
+    margin-top: -5px;
+    transform: rotate(-90deg);
+}
