--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
+.app-container{
+  display: flex;
+  justify-content: space-between;
+}
+
 .interaction-task-container{
   margin-left: 50px;
+  margin-right: 50px;
   margin-top: 20px;
   padding: 24px;
   width: fit-content;
@@ -8,9 +14,17 @@
 }
 
 .selected-task-container{
-  position: absolute;
-  right: 30px;
-  top: 30px;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 20px;
+  padding: 24px;
+  width: 30%;
+  border-radius: 24px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0 7px 29px 0;
+}
+
+.task-title{
+  text-align: center;
 }
 
 .main-title {
@@ -19,14 +33,19 @@
 
 .create-task-button,
 .suggest-task-button,
-.cancel-task-button{
-  width: 20px;
-  height: 20px;
+.cancel-task-button
+.update-task-button{
+  width: 23px;
+  height: 23px;
   position: relative;
   color: transparent;
   background: transparent;
   border: 0;
   opacity: 1;
+}
+
+.update-task-button{
+  padding: 0;
 }
 
 button.remove-task-button {
@@ -40,7 +59,9 @@ button.remove-task-button:hover {
 .delete-icon::before,
 .delete-icon::after,
 .create-icon::before,
-.create-icon::after {
+.create-icon::after,
+.update-task-button:before,
+.update-task-button:after{
   content: "";
   position: absolute;
   display: block;
