--- a/src/components/UpdateTask/UpdateTask.css
+++ b/src/components/UpdateTask/UpdateTask.css
@@ -1,62 +1,17 @@
-.input-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-content: space-between;
-    height: 100%;
-    padding: 0;
-}
+/* Error: Can't find stylesheet to import.
+ *   ,
+ * 1 | @import 'src/shared/Styles/variables';
+ *   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+ *   '
+ *   UpdateTask.scss 1:9  root stylesheet */
 
-.edit-task {
-    width: 100%;
-    height: 30px;
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 15px 0 0;
-    padding-left: 0;
-}
-
-.edit-task__input {
-    margin-left: 20px;
-    padding: 6px 12px;
-    border-radius: 8px;
-    border: 1px solid black;
-    width: 80%;
-}
-
-.button-bar{
-    display: flex;
-    justify-content: space-between;
-}
-
-.suggest-selected-task-button,
-.cancel-selected-task-button{
-    width: 100%;
-    height: 25px;
-}
-
-.cancel-selected-task-button{
-    background: crimson;
-}
-
-.cancel-selected-task-button:hover{
-    background: red;
-}
-
-.cancel-selected-task-button:active{
-    background: darkred;
-}
-
-.suggest-selected-task-button{
-    background: #4BA221
-}
-
-.suggest-selected-task-button:hover{
-    background: greenyellow;
-}
-
-.suggest-selected-task-button:active{
-    background: darkgreen;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 1 \2502  @import 'src/shared/Styles/variables';\d\a   \2502          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   UpdateTask.scss 1:9  root stylesheet";
 }
